CO 1283 Add Buttons Misaligned On Canvas - fixed post ID change

--- a/app/webroot/css/comanage.css
+++ b/app/webroot/css/comanage.css
@@ -831,6 +831,7 @@ td.top {
 #view_org_identity .addbutton,
 #CoPersonEditForm .addbutton,
 #CoPersonRoleEditForm .addbutton,
+#CoPersonCanvasForm .addbutton,
 .noborder .addbutton,
 .noborder .editbutton {
   float: right;
